--- a/templatePatch/platform.yaml
+++ b/templatePatch/platform.yaml
@@ -16,7 +16,7 @@ spec:
           revision: HEAD
           files:
           # Find all .argocd.json
-            - path: 'templatePatch/**/.argocd.json'
+            - path: 'templatePatch/**/.argocd.yaml'
           values:
             # Add enabled field if clusters.${name}.enabled = true
             # name comes from the cluster generator
