fix: add source

--- a/templatePatch/argocd/.argocd.yaml
+++ b/templatePatch/argocd/.argocd.yaml
@@ -1,3 +1,6 @@
+source:
+  repoURL: https://github.com/irizzante/argocd-experiments.git
+  targetRevision: HEAD
 destination:
   namespace: kyverno
 valueFiles:
