--- a/templatePatch/argocd/.argocd.yaml
+++ b/templatePatch/argocd/.argocd.yaml
@@ -1,6 +1,6 @@
 source:
   repoURL: https://kyverno.github.io/kyverno
-  targetRevision: 2.7.0
+  targetRevision: "2.7.0"
   releaseName: kyverno
 destination:
   namespace: kyverno
