--- a/templatePatch/kyverno/.argocd.yaml
+++ b/templatePatch/kyverno/.argocd.yaml
@@ -2,6 +2,7 @@ source:
   repoURL: https://kyverno.github.io/kyverno
   targetRevision: "2.7.0"
   releaseName: kyverno
+  chart: kyverno
 destination:
   namespace: kyverno
 valueFiles:
