--- a/templatePatch/kyverno/.argocd.yaml
+++ b/templatePatch/kyverno/.argocd.yaml
@@ -1,3 +1,5 @@
+annotations:
+  argocd.argoproj.io/compare-options: ServerSideDiff=true,IncludeMutationWebhook=true
 source:
   repoURL: https://kyverno.github.io/kyverno
   targetRevision: "2.7.0"
