chore: Update argocd template with correct values file path

--- a/templatePatch/platform.yaml
+++ b/templatePatch/platform.yaml
@@ -41,7 +41,7 @@ spec:
           - ServerSideApply={{ dig "syncPolicy" "syncOptions" "ServerSideApply" "true" . }}
           - CreateNamespace={{ dig "syncPolicy" "syncOptions" "CreateNamespace" "true" . }}
   templatePatch: |
-    {{ if (dig "annotations" .) }}
+    {{ if .annotations }}
     metadata:
       annotations:
         {{- range $key, $value := .annotations }}
