chore: Update argocd template with correct values file path

--- a/templatePatch/platform.yaml
+++ b/templatePatch/platform.yaml
@@ -22,10 +22,10 @@ spec:
             # Add enabled field if clusters.${name}.enabled = true
             # name comes from the cluster generator
             enabled: '{{ dig "clusters" .name "enabled" true . }}'
-    #selector:
-    #  matchLabels:
-    #    # Keep only the one which field enabled=true
-    #    enabled: "true"
+    selector:
+      matchLabels:
+        # Keep only the one which field enabled=true
+        enabled: "true"
   template:
     metadata:
       name: '{{ .path.basename }}'
