chore: Update argocd template with correct values file path

--- a/templatePatch/kyverno/.argocd.yaml
+++ b/templatePatch/kyverno/.argocd.yaml
@@ -14,7 +14,5 @@ clusters:
     enabled: true
   prod:
     enabled: true
-  in-cluster:
-    enabled: true
-  "local cluster":
+  local:
     enabled: true
