--- a/templatePatch/platform.yaml
+++ b/templatePatch/platform.yaml
@@ -22,14 +22,14 @@ spec:
             # Add enabled field if clusters.${name}.enabled = true
             # name comes from the cluster generator
             enabled: '{{ dig "clusters" .name "enabled" true . }}'
-    selector:
-      matchLabels:
-        # Keep only the one which field enabled=true
-        enabled: "true"
+    #selector:
+    #  matchLabels:
+    #    # Keep only the one which field enabled=true
+    #    enabled: "true"
         
   template:
     metadata:
-      name: '{{ .path.basename }}'
+      name: '{{ .path.basename }}-{{ .name }}'
     spec:
       project: default
       destination:
@@ -64,3 +64,6 @@ spec:
             {{- range $valueFile := .valueFiles }}
               - {{ $valueFile }}
             {{- end }}
+            values: |
+              myValue: {{ .name }}
+              myValueA: {{ .enabled }}
