--- a/templatePatch/platform.yaml
+++ b/templatePatch/platform.yaml
@@ -17,15 +17,15 @@ spec:
           revision: HEAD
           files:
           # Find all .argocd.yaml
-            - path: 'templatePatch/**/.argocd.yaml'
+            - path: 'templatePatch/**/.argocd.json'
           values:
             # Add enabled field if clusters.${name}.enabled = true
             # name comes from the cluster generator
             enabled: '{{ dig "clusters" .name "enabled" true . }}'
-    #selector:
-    #  matchLabels:
-    #    # Keep only the one which field enabled=true
-    #    enabled: "true"
+    selector:
+      matchLabels:
+        # Keep only the one which field enabled=true
+        enabled: "true"
         
   template:
     metadata:
@@ -66,4 +66,3 @@ spec:
             {{- end }}
             values: |
               myValue: {{ .name }}
-              myValueA: {{ .enabled }}
