--- a/templatePatch/platform.yaml
+++ b/templatePatch/platform.yaml
@@ -22,10 +22,10 @@ spec:
             # Add enabled field if clusters.${name}.enabled = true
             # name comes from the cluster generator
             enabled: '{{ dig "clusters" .name "enabled" true . }}'
-    selector:
-      matchLabels:
-        # Keep only the one which field enabled=true
-        enabled: "true"
+    #selector:
+    #  matchLabels:
+    #    # Keep only the one which field enabled=true
+    #    'enabled': "true"
         
   template:
     metadata:
@@ -65,4 +65,4 @@ spec:
               - {{ $valueFile }}
             {{- end }}
             values: |
-              myValue: {{ .name }}
+              myValue: {{ .values.enabled }}
