--- a/parameters-in-selector/platform.yaml
+++ b/parameters-in-selector/platform.yaml
@@ -22,7 +22,7 @@ spec:
     spec:
       project: default
       destination:
-        server: '{{.name}}'
+        server: '{{.server}}'
         namespace: '{{index .path.segments 2}}'
       syncPolicy:
         automated:
