--- a/parameters-in-selector/platform.yaml
+++ b/parameters-in-selector/platform.yaml
@@ -12,7 +12,7 @@ spec:
       - clusters: {}
       - git:
           repoURL: '{{.metadata.annotations.addons_repo_url}}'
-          revision: '{{.metadata.annotations.addons_repo_revision}}'
+          revision: 'HEAD'
           directories:
             - path: '{{.metadata.annotations.addons_repo_basepath}}/apps/*/envs/*'
         
