--- a/parameters-in-selector/platform.yaml
+++ b/parameters-in-selector/platform.yaml
@@ -14,12 +14,12 @@ spec:
             environment: '{{.metadata.labels.environment}}'
       - git:
           repoURL: '{{.metadata.annotations.addons_repo_url}}'
-          revision: 'HEAD'
+          revision: '{{.metadata.annotations.addons_repo_revision}}'
           directories:
             - path: '{{.metadata.annotations.addons_repo_basepath}}/apps/*/envs/*'
-        selector:
-          matchExpressions:
-            - {key: 'environment', operator: In, values: ['{{.environment}}']}
+    selector:
+      matchExpressions:
+        - {key: 'environment', operator: In, values: ['{{.values.environment}}']}
         
   template:
     metadata:
