--- a/crossplane/apps/crossplane-resources/providers.yaml
+++ b/crossplane/apps/crossplane-resources/providers.yaml
@@ -22,3 +22,7 @@ metadata:
   name: provider-helm
 spec:
   package: xpkg.upbound.io/crossplane-contrib/provider-helm:v0.19.0
+  runtimeConfigRef:
+    apiVersion: pkg.crossplane.io/v1beta1
+    kind: DeploymentRuntimeConfig
+    name: provider-helm
