--- a/crossplane/apps/values/argocd.yaml
+++ b/crossplane/apps/values/argocd.yaml
@@ -172,6 +172,15 @@ configs:
             return health_status
           end
 
+          if obj.status == nil or obj.status.conditions == nil then
+            if obj.kind == "ProviderConfig" and obj.status.users ~= nil then
+              health_status.status = "Healthy"
+              health_status.message = "Resource is in use."
+              return health_status
+            end
+            return health_status
+          end
+
           for i, condition in ipairs(obj.status.conditions) do
             if condition.type == "LastAsyncOperation" then
               if condition.status == "False" then
