chore: Update appsets path in kyverno.yaml and root.yaml

--- a/app-of-applicationset-deletion/appsets/kyverno.yaml
+++ b/app-of-applicationset-deletion/appsets/kyverno.yaml
@@ -7,7 +7,7 @@ spec:
   goTemplate: true
   goTemplateOptions: ["missingkey=error"]
   generators:
-  - cluster: {}
+  - clusters: {}
   template:
     metadata:
       name: 'addon-{{.name}}-kyverno'
