fix(app-of-applicationsets): fix destination server name

--- a/app-of-applicationset-deletion/root-appset.yaml
+++ b/app-of-applicationset-deletion/root-appset.yaml
@@ -18,7 +18,7 @@ spec:
         repoURL: 'https://github.com/irizzante/argocd-experiments.git'
         targetRevision: HEAD
       destination:
-        name: '{{.name}}'
+        name: '{{name}}'
         namespace: 'argocd'
       syncPolicy:
         automated:
