--- a/app-of-applicationset-order/appsets/60-nginx.yaml
+++ b/app-of-applicationset-order/appsets/60-nginx.yaml
@@ -25,6 +25,12 @@ spec:
         syncOptions:
           - CreateNamespace=true
           - ServerSideApply=true
+        retry:
+          limit: 5
+          backoff:
+            duration: 5s
+            maxDuration: 3m0s
+            factor: 2
       sources:
         - repoURL: https://github.com/irizzante/argocd-experiments.git
           targetRevision: '{{.metadata.annotations.addons_repo_revision}}'
@@ -32,4 +38,7 @@ spec:
         - repoURL: 'https://kubernetes.github.io/ingress-nginx'
           chart: 'ingress-nginx'
           targetRevision: '4.11.0'
-          
+          values: |
+            controller:
+              service:
+                type: ClusterIP
