--- a/app-of-applicationset-order/appsets/60-nginx.yaml
+++ b/app-of-applicationset-order/appsets/60-nginx.yaml
@@ -25,6 +25,7 @@ spec:
         syncOptions:
           - CreateNamespace=true
           - ServerSideApply=true
+          - Validate=false
         retry:
           limit: 5
           backoff:
