chore: Update appsets path in kyverno.yaml and root.yaml

--- a/app-of-applicationset-order/appsets/60-nginx.yaml
+++ b/app-of-applicationset-order/appsets/60-nginx.yaml
@@ -39,7 +39,8 @@ spec:
         - repoURL: 'https://kubernetes.github.io/ingress-nginx'
           chart: 'ingress-nginx'
           targetRevision: '4.11.0'
-          values: |
-            controller:
-              service:
-                type: ClusterIP
+          helm:
+            values: |
+              controller:
+                service:
+                  type: ClusterIP
